--- a/index.html
+++ b/index.html
@@ -112,6 +112,19 @@
   </div>
 
 </center>
+	 <center><div class="superfly">
+   <img src="https://i.pinimg.com/564x/17/d1/cb/17d1cb593a6ca08253f12df831cf5b24.jpg">
+   <button><h1>is smoking weed bad for you?</h1></button>
+     
+       <img src="https://i.pinimg.com/564x/33/a8/b2/33a8b2cf3bca410ad926c55afe0a388d.jpg">
+   <button><h1>Owning a super car maybe rewarding and money saving</h1></button>
+   
+        <img src="https://i.pinimg.com/564x/d8/f2/72/d8f272f2369217f4f645eeb4b8e41817.jpg">
+   <button><h1>Is there really going to be a hotel on the moon?</h1></button>
+   
+    <img src="https://i.pinimg.com/564x/fd/83/ea/fd83ea6b72158f46db7f3d7e5c167502.jpg">
+   <button><h1>Whats new in the world?</h1></button>
+  </div></center>
 	<script>
 		var x = 0;
 var y = 0;
