--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@
    <button><h1>Is there really going to be a hotel on the moon?</h1></button>
    
     <img src="https://i.pinimg.com/564x/fd/83/ea/fd83ea6b72158f46db7f3d7e5c167502.jpg">
-   <button><h1>Whats new in the world?</h1></button>
+   <button><h1>Whats new in the world?</h1>
+	   <p>Word on the space ship is we might be having hotels on the moon sooner than later</p></button>
   </div></center>
 	<script>
 		var x = 0;
