--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
  
    <head>
             <div class ="containers"></div>    
+	   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-9521486387467206",
+    enable_page_level_ads: true
+  });
+</script>
          </head>
          
 <body>    
