--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
            <style type= "text/css">
                      <script type='text/javascript'> 
            
-                               { }
+                               p          {
+                               font-size: 24px;
+                               color: black;
                    
                     h1        {
                                 font-family: ar berkley;
