--- a/index.html
+++ b/index.html
@@ -97,22 +97,25 @@
   </div>
 
 </center>
-	 <center><div class="superfly">
-   <img src="https://i.pinimg.com/564x/17/d1/cb/17d1cb593a6ca08253f12df831cf5b24.jpg">
-   <button><h1>Is smoking weed bad for you?</h1>
-		 <p>New CBD oil is providing more health benefits than alot of people know or take credit for.</p></button>
-     
-       <img src="https://i.pinimg.com/564x/33/a8/b2/33a8b2cf3bca410ad926c55afe0a388d.jpg">
-   <button><h1>Owning a super car maybe rewarding and money saving</h1>
-	   <p>Alot of entrepreneurs use assets and luxury things to increase their networth and to hold cash investments.</p></button>
-   
-        <img src="https://i.pinimg.com/564x/d8/f2/72/d8f272f2369217f4f645eeb4b8e41817.jpg">
-   <button><h1>Is there really going to be a hotel on the moon?</h1>
-	   <p>Word on the space ship is we might be having hotels on the moon sooner than later</p></button>
-   
-    <img src="https://i.pinimg.com/564x/fd/83/ea/fd83ea6b72158f46db7f3d7e5c167502.jpg">
-   <button><h1>Whats new in the world?</h1>
-	   <p></p></button>
+<center><div class="superfly">
+              <div class="clothed"> 
+		    	    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+<input type="hidden" name="cmd" value="_s-xclick">
+<input type="hidden" name="hosted_button_id" value="AYLXCW7S6GKDC">
+<table>
+<tr><td><input type="hidden" name="on0" value="Options">Options</td></tr><tr><td><select name="os0">
+	<option value="Students">Students : $5.50 USD - monthly</option>
+	<option value="Bosses">Bosses : $360.00 USD - yearly</option>
+</select> </td></tr>
+</table>
+<input type="hidden" name="currency_code" value="USD">
+<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_subscribe_SM.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+</form>
+		    <A HREF="https://www.paypal.com/cgi-bin/webscr?cmd=_subscr-find&alias=UAGYHTHA6PUVJ">
+<IMG SRC="https://www.paypalobjects.com/en_US/i/btn/btn_unsubscribe_SM.gif" BORDER="0">
+</A>
+		    </div>
   </div></center>
 	<script>
 		var x = 0;
