--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
   </div>
 
 </center>
+
+	<div class="withlove">
+	</div>
 <center><div class="superfly">
               <div class="clothed"> 
 		    	    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
