--- a/index.html
+++ b/index.html
@@ -39,12 +39,7 @@
 	<br>
 	<br>
 	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br><center>  
+	<center>  
 <div class="border5">
 	
     <div id="right-sidebar">
