--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	</header>       
  
    <head>
-            <div class ="containers"></div>    
+            <div class ="containers"><h7 class="neon" data-text="DIAMONDROLL$">DIAMONDROLL$</h7></div>    
 	   
          </head>
          
@@ -43,7 +43,7 @@
 <div class="border5">
 	
     <div id="right-sidebar">
-		<h7 class="neon" data-text="DIAMONDROLL$">DIAMONDROLL$</h7>	
+			
       <br>
       <br>
 	  <br>
