--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
          </head>
          
 <body>    
-  <br>
-	<br>
+  <center> <img src="https://i.pinimg.com/originals/52/83/fc/5283fcaf7ea8b04624111280bb3592e9.gif"
+		height="200px" width="300px" /> </center>
 	<br>
 	<br>
 	<center>  
