--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
          </head>
          
 <body>    
-  <center> <img src="https://i.pinimg.com/originals/52/83/fc/5283fcaf7ea8b04624111280bb3592e9.gif"
-		height="500px" width="750px" /> </center>
+  <center> <div class="coverphoto"> </center>
 	<br>
 	<br>
 	<br>
