--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
          </head>
          
 <body>    
-  <center> <div class="coverphoto"> </center>
+	<center> <div class="coverphoto"></div> </center>
 	<br>
 	<br>
 	<br>
