--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
            
                                p          {
                                font-size: 24px;
-                               color: black;
+                               color:#E9DEFF ;
 		   }
                    
                     h1        {
