--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
          </head>
          
 <body>    
-	<center> <div class="coverphoto"><button type="button"><p> welcome </p></button></div> </center>
+	<center> <div class="coverphoto"><p> welcome </p></div> </center>
 	<br>
 	<br>
 	<br>
