--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
 	<div class="withlove">
 	</div>
-<center><div class="superfly">
+<center>
               <div class="clothed"> 
 		    	    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 <input type="hidden" name="cmd" value="_s-xclick">
@@ -128,7 +128,7 @@
 <IMG SRC="https://www.paypalobjects.com/en_US/i/btn/btn_unsubscribe_SM.gif" BORDER="0">
 </A>
 		    </div>
-  </div></center>
+  <button>Ready to dominate your finances and health? Sign up for any one of our plans! get a free Ipad or Apple Watch with our bosses plan! LETS DOMINATE!!!</button></center>
 	<script>
 		var x = 0;
 var y = 0;
