--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 		<a href='https://diamondrolls.github.io/personalfinance/'><div class='finances1'><h2>Savings & Finance </h2></div></a>
 		<br>
 		<br>
-		<a href='https://diamondrolls.github.io/stocks/'><div class='stocks2'><h2>Wall Street</h2></div></a>
+		<a href='https://diamondrolls.github.io/stocks/'><div class='stocks2'><h2>Stocks</h2></div></a>
 		<br>
 		<br>
 	        <a href='https://diamondrolls.github.io/fitness/'><div class='health3'><h2>Healthmania</h2></div></a>
