--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
 
 
         
-
+ <p>Check out our new CBD products 
+	 <img src="https://i.pinimg.com/564x/aa/ec/fb/aaecfbf5713710f1c0b63cbc3df06f02.jpg"
+	      height="400" width="350"></p>
 
      	       
     </div>
