--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
 
 
         
- <div class="loverboy"><h2>Check out our new CBD products</h2> 
-	 </div>
+ <a href='https://diamondrolls.github.io/weed/'><div class="loverboy"><h2>Check out our new CBD products</h2> 
+	 </div></a>
 
      	       
     </div>
