--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 		<a href='https://diamondrolls.github.io/stocks/'><div class='stocks2'><h2>Stocks</h2></div></a>
 		<br>
 		<br>
-	        <a href='https://diamondrolls.github.io/fitness/'><div class='health3'><h2>Healthmania</h2></div></a>
+	        <a href='https://diamondrolls.github.io/fitness/'><div class='health3'><h2>Fitness</h2></div></a>
 		<br>
                 <br>
                 <a href='https://diamondrolls.github.io/clothes/'><div class='products4'><h2>Products</h2>  </div></a>
