--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
 
         
- <a href='https://diamondrolls.github.io/weed/'><div class="loverboy"><h2>Check out our new CBD products</h2> 
+ <a href='https://diamondrolls.github.io/arcade/'><div class="loverboy"><h2>Games</h2> 
 	 </div></a>
 
      	       
