--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@
 			    
 	      </div></center>
 	<button>Ready to dominate your finances and health? 
-				    Sign up for any one of our plans! 
-				    Get a free Ipad or Apple Watch with our bosses plan! 
-				    LETS DOMINATE!!!</button>
+				    Sign up for our bosses plan &
+				    get a free Ipad or Apple Watch!!
+				    Because WE DOMINATE!!!</button>
   	<script>
 		var x = 0;
 var y = 0;
