--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 	<header>
          <link href= 'https://diamondrolls.github.io/homepage/style.css' rel= 'stylesheet'>
-       <link rel="favicon" type="image/jpg" href="https://i.pinimg.com/564x/72/4b/29/724b298d081474c526faeefe63f70dae.jpg"/>
+<link rel="shortcut icon" href="https://i.pinimg.com/564x/d7/d7/0f/d7d70fb317a9bd1391f36739f0a4caa8.jpg" />
+		<link rel="apple-touch-icon-precomposed" href="https://i.pinimg.com/564x/d7/d7/0f/d7d70fb317a9bd1391f36739f0a4caa8.jpg" />
              <title>Diamondrolls / Healthy Living, Positive Vibes, Prosperity</title>
           
          <meta name="author" content="Solomon Shamir Thompson">
