--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html>
 	<header>
          <link href= 'https://diamondrolls.github.io/homepage/style.css' rel= 'stylesheet'>
-<link rel="shortcut icon" href="https://i.pinimg.com/564x/d7/d7/0f/d7d70fb317a9bd1391f36739f0a4caa8.jpg" />
-		<link rel="apple-touch-icon-precomposed" href="https://i.pinimg.com/564x/d7/d7/0f/d7d70fb317a9bd1391f36739f0a4caa8.jpg" />
-             <title>Diamondrolls / Healthy Living, Positive Vibes, Prosperity</title>
+  <title>Diamondrolls / Healthy Living, Positive Vibes, Prosperity</title>
           
          <meta name="author" content="Solomon Shamir Thompson">
            <meta name="description" content="how to make money online">
@@ -30,6 +28,13 @@
 	</header>       
  
    <head>
+	   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
+<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="theme-color" content="#ffffff">
            <div class="revolver">
           <div class ="containers">	<h7 class="neon" data-text="DIAMONDROLL$">DIAMONDROLL$</h7></div>     
         
