--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
           <!DOCTYPE html>
 <html>
 	<header>
-		 <link rel="apple-touch-icon" sizes="180x180" href="https://i.pinimg.com/564x/d7/d7/0f/d7d70fb317a9bd1391f36739f0a4caa8.jpg">
-<link rel="icon" type="image/png" sizes="32x32" href="https://i.pinimg.com/564x/d7/d7/0f/d7d70fb317a9bd1391f36739f0a4caa8.jpg">
-<link rel="icon" type="image/png" sizes="16x16" href="https://i.pinimg.com/564x/d7/d7/0f/d7d70fb317a9bd1391f36739f0a4caa8.jpg">
-<link rel="manifest" href="https://i.pinimg.com/564x/d7/d7/0f/d7d70fb317a9bd1391f36739f0a4caa8.jpg">
-<link rel="mask-icon" href="https://i.pinimg.com/564x/d7/d7/0f/d7d70fb317a9bd1391f36739f0a4caa8.jpg" color="#5bbad5">
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
+<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#ffffff">
          <link href= 'https://diamondrolls.github.io/homepage/style.css' rel= 'stylesheet'>
