--- a/index.html
+++ b/index.html
@@ -78,22 +78,21 @@
       <br>
 	  <br>
         
- <a href='https://diamondrolls.github.io/arcade/'><div class="loverboy"><h2>Games</h2> 
-	 </div></a>
-<br>
-	<br>
-	
-	
-     	       <a href='https://diamondrolls.github.io/realestate/'><div class="realestate"><h2>Realestate</h2> 
-	 </div></a>
-    </div>
+               <a href='https://diamondrolls.github.io/arcade/'><div class="loverboy"><h2>Games</h2> </div></a>
+               <br>
+	       <br>
+     	       <a href='https://diamondrolls.github.io/realestate/'><div class="realestate"><h2>Realestate</h2> </div></a>
+	       <br>
+	       <br>
+	       <a href='https://diamondrolls.github.io/stocks/'><div class='stocks2'><h2>Stocks</h2></div></a>
+	       <br></div>
 	     
 		
 			<div id= "left-sidebar">
+      <br>
+      <br>
+	  <br>
 		<a href='https://diamondrolls.github.io/personalfinance/'><div class='finances1'><h2>Savings & Finance </h2></div></a>
-		<br>
-		<br>
-		<a href='https://diamondrolls.github.io/stocks/'><div class='stocks2'><h2>Stocks</h2></div></a>
 		<br>
 		<br>
 	        <a href='https://diamondrolls.github.io/fitness/'><div class='health3'><h2>Love & Fitness</h2></div></a>
