--- a/index.html
+++ b/index.html
@@ -104,11 +104,15 @@
 	<br>
 	<br>
 	<br>
+		</div>
+
+</center>
 	<br>
 	<br>
 	<br>
 	<br>
 	<br>
+<center>
   <section class="slide">
     <place>
        <img src="https://i.pinimg.com/564x/fb/b4/30/fbb4307134f02008b792db60f26aa8e5.jpg?b=t" width="230px"height="350px">
@@ -127,8 +131,6 @@
     </place>
 </section>
 		
-		</div>
-
 </center>
  
 	<div class="withlove">
