--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
      	       <a href='https://diamondrolls.github.io/realestate/'><div class="realestate"><h2>Realestate</h2> </div></a>
 	       <br>
 	       <br>
-	       <a href='https://diamondrolls.github.io/stocks/'><div class='stocks2'><h2>Stocks</h2></div></a>
+	       <a href='https://diamondrolls.github.io/stocks/'><div class=“stocks2”><h2>Stocks</h2></div></a>
 	       <br></div>
 	     
 		
