--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
    
 
- <div class="right-sidebar">
+ <div id="right-sidebar">
 			
       <br>
       <br>
@@ -88,7 +88,7 @@
 	       <br></div>
 	     
 		
-			<div class= "left-sidebar">
+			<div id= "left-sidebar">
       <br>
       <br>
 	  
