--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
      	       <a href='https://diamondrolls.github.io/realestate/'><div class="realestate"><h2>Realestate</h2> </div></a>
 	       <br>
 	       <br>
-	       <a href='https://diamondrolls.github.io/stocks/'><div class="Stocks2"><h2>Stocks</h2></div></a>
-	       <br></div>
+	       <a href='https://diamondrolls.github.io/stocks/'><div class="stocks2"><h2>Stocks</h2>  </div></a>
+	       </div>
 	     
 		
 			<div id= "left-sidebar">
