--- a/index.html
+++ b/index.html
@@ -120,14 +120,15 @@
 <input type="hidden" name="hosted_button_id" value="AYLXCW7S6GKDC">
 <table>
 <tr><td><input type="hidden" name="on0" value="Options">Options</td></tr><tr><td><select name="os0">
-	<option value="Students">Students : $2.50 USD - monthly</option>
-	<option value="Bosses">Bosses : $360.00 USD - yearly</option>
+	<option value="Couples">Couples : $5.50 USD - monthly</option>
+	<option value="Counseling Package">Counseling Package : $360.00 USD - monthly</option>
 </select> </td></tr>
 </table>
 <input type="hidden" name="currency_code" value="USD">
 <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_subscribe_SM.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
 <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
 </form>
+
 
 		    <A HREF="https://www.paypal.com/cgi-bin/webscr?cmd=_subscr-find&alias=UAGYHTHA6PUVJ">
 <IMG SRC="https://www.paypalobjects.com/en_US/i/btn/btn_unsubscribe_SM.gif" BORDER="0">
