--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <a href='https://diamondrolls.github.io/clothes/'><div class='products4'><h2>Products</h2>  </div></a>
 		<br></div>
   <br>
-	<img src='https://i.pinimg.com/564x/da/68/4f/da684fca300555fcf3bff6621152dbe5.jpg' width='px' height='px'>
+	<img src='https://i.pinimg.com/564x/da/68/4f/da684fca300555fcf3bff6621152dbe5.jpg' width='700px' height='300px'>
 	
 	
 		</div>
