--- a/index.html
+++ b/index.html
@@ -112,19 +112,22 @@
 	</div>
 <center>
               <div class="clothed"> 
-		    	   <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+		    	   
+		      
+<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 <input type="hidden" name="cmd" value="_s-xclick">
-<input type="hidden" name="hosted_button_id" value="AYLXCW7S6GKDC">
+<input type="hidden" name="hosted_button_id" value="P4Y595PKJUB4G">
 <table>
 <tr><td><input type="hidden" name="on0" value="Options">Options</td></tr><tr><td><select name="os0">
-	<option value="Couples">Couples : $5.50 USD - monthly</option>
-	<option value="Counseling Package">Counseling Package : $360.00 USD - monthly</option>
+	<option value="new releases">new releases : $8.00 USD - monthly</option>
+	<option value="news letters">news letters : $360.00 USD - monthly</option>
 </select> </td></tr>
 </table>
 <input type="hidden" name="currency_code" value="USD">
 <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_subscribe_SM.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
 <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
 </form>
+
 
 
 		    <A HREF="https://www.paypal.com/cgi-bin/webscr?cmd=_subscr-find&alias=UAGYHTHA6PUVJ">
