--- a/index.html
+++ b/index.html
@@ -80,25 +80,25 @@
  <div id="right-sidebar">
 			
       
-	       <a href='https://diamondrolls.github.io/stocks/'><div class="stocks2"><h2>Stocks</h2>  </div></a>
+	       <a href='https://diamondrolls.github.io/stocks/'><div class="stocks2"><button>Stocks</button>  </div></a>
                <br>
 	       <br>
-               <a href='https://diamondrolls.github.io/arcade/'><div class="loverboy"><h2>Games</h2> </div></a>
+               <a href='https://diamondrolls.github.io/arcade/'><div class="loverboy"><button>Games</button> </div></a>
                <br>
 	       <br>
-     	       <a href='https://diamondrolls.github.io/realestate/'><div class="realestate"><h2>Realestate</h2> </div></a>
+     	       <a href='https://diamondrolls.github.io/realestate/'><div class="realestate"><button>Realestate</button> </div></a>
 	       <br>
 	       </div>
 	     
 		
 			<div id= "left-sidebar">
-	        <a href='https://diamondrolls.github.io/fitness/'><div class='health3'><h2>Love & Fitness</h2></div></a>
+	        <a href='https://diamondrolls.github.io/fitness/'><div class='health3'><button>Love & Fitness</button></div></a>
 		<br>
                 <br>
-		<a href='https://diamondrolls.github.io/personalfinance/'><div class='finances1'><h2>Savings & Finance </h2></div></a>
+		<a href='https://diamondrolls.github.io/personalfinance/'><div class='finances1'><button>Savings & Finance </button></div></a>
 		<br>
 		<br>
-                <a href='https://diamondrolls.github.io/clothes/'><div class='products4'><h2>Products</h2>  </div></a>
+                <a href='https://diamondrolls.github.io/clothes/'><div class='products4'><button>Products</button> </div></a>
 		<br></div>
   <br>
 	
