--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 	        <a href='https://diamondrolls.github.io/fitness/'><div class='health3'><button>Love & Fitness</button></div></a>
 		<br>
                 <br>
-		<a href='https://diamondrolls.github.io/personalfinance/'><div class='finances1'><button>Savings & Finance </button></div></a>
+		<a href='https://diamondrolls.github.io/personalfinance/'><div class='finances1'><button>Savings & Credit </button></div></a>
 		<br>
 		<br>
                 <a href='https://diamondrolls.github.io/clothes/'><div class='products4'><button>Products</button> </div></a>
