--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </center>
           <!-- end www.htmlcommentbox.com -->
      </div>
-	<center> <div class="coverphoto"><h2>welcome </h2></div> </center>
+	<center><a href="https://diamondrolls.org/"> <div class="coverphoto"><h2>welcome </h2></div></a> </center>
 	<br>
 	<br>
 	<br>
