--- a/index.html
+++ b/index.html
@@ -73,25 +73,25 @@
  <div id="right-sidebar">
 			
       
-	       <a href='https://diamondrolls.github.io/stocks/'><div class="stocks2"><button>Stocks</button>  </div></a>
+	       <a href='https://diamondrolls.github.io/stocks/'target="_blank"><div class="stocks2"><button>Stocks</button>  </div></a>
                <br>
 	       <br>
-               <a href='https://diamondrolls.github.io/arcade/'><div class="loverboy"><button>Games</button> </div></a>
+               <a href='https://diamondrolls.github.io/arcade/'target="_blank"><div class="loverboy"><button>Games</button> </div></a>
                <br>
 	       <br>
-     	       <a href='https://diamondrolls.github.io/realestate/'><div class="realestate"><button>Realestate</button> </div></a>
+     	       <a href='https://diamondrolls.github.io/realestate/'target="_blank"><div class="realestate"><button>Realestate</button> </div></a>
 	       <br>
 	       </div>
 	     
 		
 			<div id= "left-sidebar">
-	        <a href='https://diamondrolls.github.io/fitness/'><div class='health3'><button>Love & Fitness</button></div></a>
+	        <a href='https://diamondrolls.github.io/fitness/'target="_blank"><div class='health3'><button>Love & Fitness</button></div></a>
 		<br>
                 <br>
-		<a href='https://diamondrolls.github.io/personalfinance/'><div class='finances1'><button>Savings & Credit </button></div></a>
+		<a href='https://diamondrolls.github.io/personalfinance/'target="_blank"><div class='finances1'><button>Savings & Credit </button></div></a>
 		<br>
 		<br>
-                <a href='https://diamondrolls.github.io/clothes/'><div class='products4'><button>Products</button> </div></a>
+                <a href='https://diamondrolls.github.io/clothes/'target="_blank"><div class='products4'><button>Products</button> </div></a>
 		<br></div>
   <br>
 	
