--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
          
 <body> 
 	
-	<center><a href="https://diamondrolls.org/"> <div class="coverphoto"><h2>welcome </h2></div></a> </center>
+	<center><a href="https://diamondrolls.org/" target="_blank"> <div class="homepege"></div></a> </center>
 	<br>
 	<br>
 	<br>
