--- a/index.html
+++ b/index.html
@@ -110,7 +110,9 @@
 	</div>
 <center>
             
-	 <div class="nighttime"><ul>
+	 <div class="nighttime">
+		 <center>
+		 <ul>
 	<li> <a>Welcome to diamondrolls . If you are looking to get away and if you are 
 		looking for a new family or community to help you build your credit and walk you through the process. I 
 		believe we are the one for you. I believe you will find everything you're looking for in here as well as 
@@ -120,7 +122,7 @@
 		faster rate. Do not be embarrassed if somebody else proves you wrong. It is all a learning experiance between
 		peers and business partners. This is the first platform where everybody gets to learn together. Jump right in
 		and have fun on us. Thank you so much for tuning in. <br>-The Diamondrolls Team</a></li></ul>
-
+               </center>
 	
 	<center><div class="clothed"> 
 		    	   
