--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 		<a href='https://diamondrolls.github.io/personalfinance/'><div class='finances1'><h3>Savings & Credit </h3></div></a>
 		<br>
 		<br>
-                <a href='https://diamondrolls.github.io/clothes/'><div class='products4'><h3>>Products</h3> </div></a>
+                <a href='https://diamondrolls.github.io/clothes/'><div class='products4'><h3>Products</h3> </div></a>
 		<br></div>
   <br>
 	
