--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
 <center>
             
 	 <div class="nighttime">
-		<ul> <center>
+		<ul> 
 		 
-	<li> <a>Welcome to diamondrolls . If you are looking to get away and if you are 
+	<li><center> <a>Welcome to diamondrolls . If you are looking to get away and if you are 
 		looking for a new family or community to help you build your credit and walk you through the process. I 
 		believe we are the one for you. I believe you will find everything you're looking for in here as well as 
 		your friends too. Knowledges everything and we talk to business owners as well as entrepreneurs to form the 
@@ -121,7 +121,7 @@
 		content through  excersizing free speech and public commenting designed to help the community learn at a 
 		faster rate. Do not be embarrassed if somebody else proves you wrong. It is all a learning experiance between
 		peers and business partners. This is the first platform where everybody gets to learn together. Jump right in
-		and have fun on us. Thank you so much for tuning in. <br>-The Diamondrolls Team</a></li></center></ul>
+		and have fun on us. Thank you so much for tuning in. <br>-The Diamondrolls Team</a><center></li></ul>
               
 	
 	<center><div class="clothed"> 
