--- a/index.html
+++ b/index.html
@@ -73,25 +73,25 @@
  <div id="right-sidebar">
 			
       
-	       <a href='https://diamondrolls.github.io/stocks/'><div class="stocks2"><h3>Stocks</h3>  </div></a>
+	       <a href='https://diamondrolls.github.io/stocks/'><div class="stocks2"><button><h3>Stocks</h3> </button> </div></a>
                <br>
 	       <br>
-               <a href='https://diamondrolls.github.io/arcade/'><div class="loverboy"><h3>Games</h3> </div></a>
+               <a href='https://diamondrolls.github.io/arcade/'><div class="loverboy"><button><h3>Games</h3></button> </div></a>
                <br>
 	       <br>
-     	       <a href='https://diamondrolls.github.io/realestate/'><div class="realestate"><h3>Realestate</h3> </div></a>
+     	       <a href='https://diamondrolls.github.io/realestate/'><div class="realestate"><button><h3>Realestate</h3></button> </div></a>
 	       <br>
 	       </div>
 	     
 		
 			<div id= "left-sidebar">
-	        <a href='https://diamondrolls.github.io/fitness/'><div class='health3'><h3>Love & Fitness</h3></div></a>
+	        <a href='https://diamondrolls.github.io/fitness/'><div class='health3'><button><h3>Love & Fitness</h3></button></div></a>
 		<br>
                 <br>
-		<a href='https://diamondrolls.github.io/personalfinance/'><div class='finances1'><h3>Savings & Credit </h3></div></a>
+		<a href='https://diamondrolls.github.io/personalfinance/'><div class='finances1'><button><h3>Savings & Credit </h3></button></div></a>
 		<br>
 		<br>
-                <a href='https://diamondrolls.github.io/clothes/'><div class='products4'><h3>Products</h3> </div></a>
+                <a href='https://diamondrolls.github.io/clothes/'><div class='products4'><button><h3>Products</h3></button> </div></a>
 		<br></div>
   <br>
 	
