--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 	        <a href='https://diamondrolls.github.io/fitness/'><div class='health3'><button><h3>Love & Fitness</h3></button></div></a>
 		<br>
                 <br>
-		<a href='https://diamondrolls.github.io/personalfinance/'><div class='finances1'><button><h3>Savings & Credit </h3></button></div></a>
+		<a href='https://diamondrolls.github.io/personalfinance/'><div class='finances1'><button><h3>Banking </h3></button></div></a>
 		<br>
 		<br>
                 <a href='https://diamondrolls.github.io/clothes/'><div class='products4'><button><h3>Products</h3></button> </div></a>
