--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 	        <a href='https://diamondrolls.github.io/fitness/'><div class='health3'><h3>Love & Fitness</h3></div></a>
 		<br>
                 <br>
-		<a href='https://diamondrolls.github.io/personalfinance/'><div class='finances1'><h3>Banking </h3></div></a>
+		<a href='https://diamondrolls.github.io/personalfinance/'><div class='finances1'><h3>Savings </h3></div></a>
 		<br>
 		<br>
                 <a href='https://diamondrolls.github.io/clothes/'><div class='products4'><h3>Products</h3> </div></a>
