--- a/index.html
+++ b/index.html
@@ -73,25 +73,25 @@
  <div id="right-sidebar">
 			
       
-	       <a href='https://diamondrolls.github.io/stocks/'><div class="stocks2"><h3>Stocks</h3>  </div></a>
+	       <a href='https://diamondrolls.github.io/stocks/'><div class="stocks2"><h7 class="neon" data-text="$tocks">$tocks</h7>  </div></a>
                <br>
 	       <br>
-               <a href='https://diamondrolls.github.io/arcade/'><div class="loverboy"><h3>Games</h3> </div></a>
+               <a href='https://diamondrolls.github.io/arcade/'><div class="loverboy"><h7 class="neon" data-text="Game$">Game$</h7> </div></a>
                <br>
 	       <br>
-     	       <a href='https://diamondrolls.github.io/realestate/'><div class="realestate"><h3>Realestate</h3> </div></a>
+     	       <a href='https://diamondrolls.github.io/realestate/'><div class="realestate"><h7 class="neon" data-text="Reale$tate">Reale$tate</h7> </div></a>
 	       <br>
 	       </div>
 	     
 		
 			<div id= "left-sidebar">
-	        <a href='https://diamondrolls.github.io/fitness/'><div class='health3'><h3>Love & Fitness</h3></div></a>
+	        <a href='https://diamondrolls.github.io/fitness/'><div class='health3'><h7 class="neon" data-text="Love & Fitne$$">Love & Fitne$$</h7></div></a>
 		<br>
                 <br>
-		<a href='https://diamondrolls.github.io/personalfinance/'><div class='finances1'><h3>Savings </h3></div></a>
+		<a href='https://diamondrolls.github.io/personalfinance/'><div class='finances1'><h7 class="neon" data-text="$aving$">$aving$</h7></div></a>
 		<br>
 		<br>
-                <a href='https://diamondrolls.github.io/clothes/'><div class='products4'><h3>Products</h3> </div></a>
+                <a href='https://diamondrolls.github.io/clothes/'><div class='products4'><h7 class="neon" data-text="Product$">Product$</h7> </div></a>
 		<br></div>
   <br>
 	
