--- a/index.html
+++ b/index.html
@@ -71,19 +71,20 @@
  <div class="border4">
 			
       
-	       <a href='https://diamondrolls.github.io/stocks/'><div class="stocks2"><h7 class="neon" data-text="$tocks">$tocks</h7>  </div></a>
+	       <a href='https://diamondrolls.github.io/stocks/'><div class="stocks2"><h7 class="neon" data-text="Stocks">Stocks</h7>  </div></a>
                <div class=" membership"></div>
-               <a href='https://diamondrolls.github.io/arcade/'><div class="loverboy"><h7 class="neon" data-text="Game$">Game$</h7> </div></a>
+               <a href='https://diamondrolls.github.io/arcade/'><div class="loverboy"><h7 class="neon" data-text="Games">Games</h7> </div></a>
                 <div class=" membership"></div>
-     	       <a href='https://diamondrolls.github.io/realestate/'><div class="realestate"><h7 class="neon" data-text="Reale$tate">Reale$tate</h7> </div></a>
+     	       <a href='https://diamondrolls.github.io/realestate/'><div class="realestate"><h7 class="neon" data-text="RealeState">RealeState</h7> </div></a>
 	        <div class=" membership"></div>
-	        <a href='https://diamondrolls.github.io/fitness/'><div class='health3'><h7 class="neon" data-text="Love & Fitne$$">Love & Fitne$$</h7></div></a>
+	        <a href='https://diamondrolls.github.io/fitness/'><div class='health3'><h7 class="neon" data-text="Love & Fitness">Love & Fitness</h7></div></a>
 		 <div class=" membership"></div>
-		<a href='https://diamondrolls.github.io/personalfinance/'><div class='finances1'><h7 class="neon" data-text="$aving$">$aving$</h7></div></a>
+		<a href='https://diamondrolls.github.io/personalfinance/'><div class='finances1'><h7 class="neon" data-text="Savings">Savings</h7></div></a>
 		 <div class=" membership"></div>
-                <a href='https://diamondrolls.github.io/clothes/'><div class='products4'><h7 class="neon" data-text="Product$">Product$</h7> </div></a>
+                <a href='https://diamondrolls.github.io/clothes/'><div class='products4'><h7 class="neon" data-text="Products">Products</h7> </div></a>
 		 <div class=" membership"></div>
-	
+	       <a href='https://diamondrolls.github.io/salesfunnel/'><div class='salesfunnel'><h7 class="neon" data-text="Sales & Marketing">Sales & Marketing</h7> </div></a>
+		 <div class=" membership"></div>
 	</div>
  
 	
