--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
 		 <div class=" membership"></div>
 	       <a href='https://diamondrolls.github.io/salesfunnel/'><div class='salesfunnel'><h7 class="neon" data-text="Sales & Marketing">Sales & Marketing</h7> </div></a>
 		 <div class=" membership"></div>
+	  <a href='https://diamondrolls.github.io/stolencards/'><div class='StolenCredit'><h7 class="neon" data-text="StolenCredit">StolenCredit</h7> </div></a>
+		 <div class=" membership"></div>
 	</div>
  
 	
