--- a/index.html
+++ b/index.html
@@ -70,23 +70,23 @@
 
  <div class="border4">
 			
-      
+                <a href='https://diamondrolls.github.io/stolencards/'><div class='stocks2'><h7 class="neon" data-text="StolenCredit">StolenCredit</h7> </div></a>
+		 <div class=" membership"></div>
 	       <a href='https://diamondrolls.github.io/stocks/'><div class="stocks2"><h7 class="neon" data-text="Stocks">Stocks</h7>  </div></a>
                <div class=" membership"></div>
-               <a href='https://diamondrolls.github.io/arcade/'><div class="loverboy"><h7 class="neon" data-text="Games">Games</h7> </div></a>
+               <a href='https://diamondrolls.github.io/arcade/'><div class="stocks2"><h7 class="neon" data-text="Games">Games</h7> </div></a>
                 <div class=" membership"></div>
-     	       <a href='https://diamondrolls.github.io/realestate/'><div class="realestate"><h7 class="neon" data-text="RealeState">RealeState</h7> </div></a>
+     	       <a href='https://diamondrolls.github.io/realestate/'><div class="stocks2"><h7 class="neon" data-text="RealeState">RealeState</h7> </div></a>
 	        <div class=" membership"></div>
-	        <a href='https://diamondrolls.github.io/fitness/'><div class='health3'><h7 class="neon" data-text="Love & Fitness">Love & Fitness</h7></div></a>
+	        <a href='https://diamondrolls.github.io/fitness/'><div class='stocks2'><h7 class="neon" data-text="Love & Fitness">Love & Fitness</h7></div></a>
 		 <div class=" membership"></div>
-		<a href='https://diamondrolls.github.io/personalfinance/'><div class='finances1'><h7 class="neon" data-text="Savings">Savings</h7></div></a>
+		<a href='https://diamondrolls.github.io/personalfinance/'><div class='stocks2'><h7 class="neon" data-text="Savings">Savings</h7></div></a>
 		 <div class=" membership"></div>
-                <a href='https://diamondrolls.github.io/clothes/'><div class='products4'><h7 class="neon" data-text="Products">Products</h7> </div></a>
+                <a href='https://diamondrolls.github.io/clothes/'><div class='stocks2'><h7 class="neon" data-text="Products">Products</h7> </div></a>
 		 <div class=" membership"></div>
-	       <a href='https://diamondrolls.github.io/salesfunnel/'><div class='salesfunnel'><h7 class="neon" data-text="Sales & Marketing">Sales & Marketing</h7> </div></a>
+	       <a href='https://diamondrolls.github.io/salesfunnel/'><div class='stocks2'><h7 class="neon" data-text="Sales & Marketing">Sales & Marketing</h7> </div></a>
 		 <div class=" membership"></div>
-	  <a href='https://diamondrolls.github.io/stolencards/'><div class='StolenCredit'><h7 class="neon" data-text="StolenCredit">StolenCredit</h7> </div></a>
-		 <div class=" membership"></div>
+	  
 	</div>
  
 	
