--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 	<ul> <li><center> <a>Welcome to diamondrolls . If you are looking to get away and if you are 
 		looking for a new family or community to help you build your credit and walk you through the process. I 
 		believe we are the one for you. I believe you will find everything you're looking for in here as well as 
-		your friends too. Knowledges everything and we talk to business owners as well as entrepreneurs to form the 
+		your friends too. Knowledge is everything and we talk to business owners as well as entrepreneurs to form the 
 		content you will see. We aim to make people realize the importance of financial freedome and expression of
 		content through  excersizing free speech and public commenting designed to help the community learn at a 
 		faster rate. Do not be embarrassed if somebody else proves you wrong. It is all a learning experiance between
