--- a/index.html
+++ b/index.html
@@ -102,12 +102,11 @@
   
 		
 		 
-	<ul> <li><center> <a>Welcome to diamondrolls . If you are looking to get away and if you are 
-		looking for a new family or community to help you build your credit and walk you through the process. I 
-		believe we are the one for you. I believe you will find everything you're looking for in here as well as 
-		your friends too. Knowledge is everything and we talk to business owners as well as entrepreneurs to form the 
-		content you will see. We aim to make people realize the importance of financial freedome and expression of
-		content through  excersizing free speech and public commenting designed to help the community learn at a 
+	<ul> <li><center> <a>Welcome to diamondrolls .Behold! A tempting open source community to help you penetrate and
+		build the financial structure you need to survive in the real world. We invite you as well as 
+		your friends to achieve more. We believe and encourage the honor of knowledge is power. 
+		We aim to make America Better and help people realize the importance of financial freedom and staying ontop of there
+		 finances through the expransion of free thought and public commenting designed to enable the community to learn at a 
 		faster rate. Do not be embarrassed if somebody else proves you wrong. It is all a learning experiance between
 		peers and business partners. This is the first platform where everybody gets to learn together. Jump right in
 		and have fun on us. Thank you so much for tuning in. <br>-The Diamondrolls Team</a><center></li></ul>
