--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
 	
 		               <a href='https://diamondrolls.github.io/arcade/'><div class="stocks2"><h7 class="neon" data-text="Games">Games</h7> </div></a>
 
+	<a href='https://diamondrolls.github.io/thepremiumway/'><div class="stocks2"><h7 class="neon" data-text="Music">Music</h7>  </div></a>
+
 	       <a href='https://diamondrolls.github.io/stocks/'><div class="stocks2"><h7 class="neon" data-text="Stocks">Stocks</h7>  </div></a>
                                
      	       <a href='https://diamondrolls.github.io/realestate/'><div class="stocks2"><h7 class="neon" data-text="RealeState">RealeState</h7> </div></a>
@@ -83,7 +85,7 @@
 	<a href='https://diamondrolls.github.io/stolencards/'><div class="stocks2"><h7 class="neon" data-text="StolenCredit">StolenCredit</h7>  </div></a>
 
 	  
-	
+
  
 	
 	
