--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 		build the financial structure you need to survive in the real world. We invite you as well as 
 		your friends to achieve more. We believe and encourage the honor of knowledge is power. 
 		We aim to make America Better and help people realize the importance of financial freedom and staying ontop of there
-		 finances through the expransion of free thought and public commenting designed to enable the community to learn at a 
+		 finances through the expansion of free thought and public knowledge designed to enable the community to learn at a 
 		faster rate. Do not be embarrassed if somebody else proves you wrong. It is all a learning experiance between
 		peers and business partners. This is the first platform where everybody gets to learn together. Jump right in
 		and have fun on us. Thank you so much for tuning in. <br>-The Diamondrolls Team</a><center></li></ul>
