--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 		
 	       <a href='https://diamondrolls.github.io/salesfunnel/'><div class='stocks2'><h7 class="neon" data-text="Sales & Marketing">Sales & Marketing</h7> </div></a>
 		            
-	<a href='https://diamondrolls.github.io/stolencards/'><div class="stocks2"><h7 class="neon" data-text="StolenCredit">StolenCredit</h7>  </div></a>
+	<a href='https://diamondrolls.org/'><div class="stocks2"><h7 class="neon" data-text="WallPapers">WallPapers</h7>  </div></a>
 
 	  
 
@@ -96,8 +96,18 @@
 	<br>
 	<br>
 	<br>
-
- 
+<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+ <br>
+	<br>
+	<br>
+	<br>
 	<div class="withlove">
 	
 
