--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                                
      	       <a href='https://diamondrolls.github.io/realestate/'><div class="stocks2"><h7 class="neon" data-text="RealeState">RealeState</h7> </div></a>
 	        
-	        <a href='https://diamondrolls.github.io/fitness/'><div class='stocks2'><h7 class="neon" data-text="Love & Fitness">Love & Fitness</h7></div></a>
+	        <a href='https://diamondrolls.github.io/fitness/'><div class='stocks2'><h7 class="neon" data-text="Fitness">Fitness</h7></div></a>
 		
 		<a href='https://diamondrolls.github.io/personalfinance/'><div class='stocks2'><h7 class="neon" data-text="Savings">Savings</h7></div></a>
 		
