--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 	       <a href='https://diamondrolls.github.io/stocks/'><div class="stocks2"><h7 class="neon" data-text="Stocks">Stocks</h7>  </div></a>
                                
-     	       <a href='https://diamondrolls.github.io/realestate/'><div class="stocks2"><h7 class="neon" data-text="RealeState">RealeState</h7> </div></a>
+     	       <a href='https://diamondrolls.github.io/realestate/'><div class="stocks2"><h7 class="neon" data-text="RealEstate">RealEstate</h7> </div></a>
 	        
 	        <a href='https://diamondrolls.github.io/fitness/'><div class='stocks2'><h7 class="neon" data-text="Fitness">Fitness</h7></div></a>
 		
