--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
          
 <body> 
 	
-		<center><a href="https://diamondrolls.org/" target="_blank"> <div class="homepage"></div></a> </center>
+		<center><a href="https://diamondrolls.org/" > <div class="homepage"></div></a> </center>
 	<br>
 	<br>
 	<br>
