--- a/index.html
+++ b/index.html
@@ -42,14 +42,7 @@
 <body> 
 	<div class="lamborghini2"><div class="lamborghini3"></div></div>
 		<center><a href="https://diamondrolls.org/" > <div class="homepage"></div></a> </center>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
+	
 	<center>  
     <div class="lamborghini">
       
@@ -77,7 +70,7 @@
 
 	  
 
- 
+ </div>
 	
 	
 		</div></center>
