--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 	  
 
- </div>
+ </div></center>
 	
 	
 		</div></center>
@@ -80,9 +80,7 @@
 	<br>
 	<br>
 	<br>
-	<br>
-	<br>
-	<br>
+	
 	<div class="lamborghini2"><div class="lamborghini3"></div></div>
 
   	<script>
