--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 		
                 <a href='https://diamondrolls.github.io/clothes/'><div class='stocks2'><h7 class="neon" data-text="Products">Products</h7> </div></a>
 		
-	       <a href='https://diamondrolls.github.io/salesfunnel/'><div class='stocks2'><h7 class="neon" data-text="Sales & Marketing">Sales & Marketing</h7> </div></a>
+	       <a href='https://diamondrolls.github.io/salesfunnel/'><div class='stocks2'><h7 class="neon" data-text="Sales">Sales</h7> </div></a>
 		            
 	<a href='https://diamondrolls.github.io/futuristicwallpapers/'><div class="stocks2"><h7 class="neon" data-text="WallPapers">WallPapers</h7>  </div></a>
 
