--- a/index.html
+++ b/index.html
@@ -49,8 +49,11 @@
        <a href='https://diamondrolls.github.io/stocks/'><div class="stocks2"><h7 class="neon" data-text="Business">Business</h7>  </div></a>
 	        
 	        <a href='https://diamondrolls.github.io/fitness/'><div class='stocks3'><h7 class="neon" data-text="Fitness">Fitness</h7></div></a>
+		<a href='https://diamondrolls.github.io/clothes/'><div class='stocks2'><h7 class="neon" data-text="Products">Products</h7></div></a>
+		<a href='https://diamondrolls.github.io/arcade/'><div class='stocks3'><h7 class="neon" data-text="Games">Games</h7></div></a>
 		
-
+<a href='https://diamondrolls.github.io/thepremiumway/'><div class='stocks2'><h7 class="neon" data-text="Music">Music</h7></div></a>
+		
 
 	
 	
