--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="lamborghini">
       
        <a href='https://diamondrolls.github.io/stocks/'><div class="stocks2"><h7 class="neon" data-text="Business">Business</h7>  </div></a>
-	        
+	        <a href='https://stockx.diamondrolls.org//'><div class='stocks3'><h7 class="neon" data-text="Crypto">Crypto</h7></div></a>
 	        <a href='https://diamondrolls.github.io/fitness/'><div class='stocks1'><h7 class="neon" data-text="Fitness">Fitness</h7></div></a>
 		<a href='https://diamondrolls.github.io/clothes/'><div class='stocks2'><h7 class="neon" data-text="Products">Products</h7></div></a>
 		<a href='https://diamondrolls.github.io/arcade/'><div class='stocks3'><h7 class="neon" data-text="Games">Games</h7></div></a>
