--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 	<br>
 <br>
 	<center>  
-   <a href=https://diamondrolls.github.io/exchange/> <div class="lamborghiniveneno">
+   <a href="https://diamondrolls.github.io/exchange/"> <div class="lamborghiniveneno">
 </div></a></center>
 	<br>
 	<br>
