--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <body> 
 	
 	<center>  
-    <div class="lamborghini">
+    <div class="yamborghini">
       
        <a href='https://diamondrolls.github.io/stocks/'><div class="stocks2"><h7 class="neon" data-text="Business">Business</h7>  </div></a>
 	        <a href='https://stockx.diamondrolls.org//'><div class='stocks3'><h7 class="neon" data-text="Crypto">Crypto</h7></div></a>
