--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		<a href='https://diamondrolls.github.io/clothes/'><div class='stocks2'><h7 class="neon" data-text="Products">Products</h7></div></a>
 		<a href='https://diamondrolls.github.io/arcade/'><div class='stocks3'><h7 class="neon" data-text="Games">Games</h7></div></a>
 		
-<a href='https://diamondrolls.github.io/thepremiumway/'><div class='stocks1'><h7 class="neon" data-text="Music">Music</h7></div></a>
+<a href="https://diamondrolls.github.io/exchange/"><div class='stocks1'><h7 class="neon" data-text="Chatt">Chatt</h7></div></a>
 		
 
 	
