--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 	
 	<center>  
     <div class="yamborghini">
-      
-       <a href='https://diamondrolls.github.io/stocks/'><div class="stocks2"><h7 class="neon" data-text="Business">Business</h7>  </div></a>
-	        <a href='https://stockx.diamondrolls.org//'><div class='stocks3'><h7 class="neon" data-text="Crypto">Crypto</h7></div></a>
+      	        <a href='https://diamondrolls.github.io/crypto/'><div class='stocks1'><h7 class="neon" data-text="Forex">Forex</h7></div></a>
+<a href='https://diamondrolls.github.io/stocks/'><div class="stocks2"><h7 class="neon" data-text="Business">Business</h7>  </div></a>
+	        <a href='https://stockx.diamondrolls.org/'><div class='stocks3'><h7 class="neon" data-text="Crypto">Crypto</h7></div></a>
 	        <a href='https://diamondrolls.github.io/fitness/'><div class='stocks1'><h7 class="neon" data-text="Fitness">Fitness</h7></div></a>
 		<a href='https://diamondrolls.github.io/arcade/'><div class='stocks3'><h7 class="neon" data-text="Games">Games</h7></div></a>
 				</div></center>
