--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
 <a href='https://diamondrolls.github.io/fitness/'><div class='stocks3'><h7 class="neon" data-text="Fitness">Fitness</h7></div></a>
                 <a href='https://diamondrolls.github.io/stocks/'><div class="stocks2"><h7 class="neon" data-text="Business">Business</h7>  </div></a>
 		<a href='https://diamondrolls.github.io/arcade/'><div class='stocks3'><h7 class="neon" data-text="Games">Games</h7></div></a>
+<a href='https://diamondrolls.github.io/thepremiumway/'><div class='stocks3'><h7 class="neon" data-text="Music">Music</h7></div></a>
+				</div></center>
 				</div></center>
 	<br>
 <br>
