--- a/index.html
+++ b/index.html
@@ -44,12 +44,7 @@
 
 	<center>  
     <div class="yamborghini">
-     <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=QD5BETP793CTA">   <div class="stocks3">	<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-<input type="hidden" name="cmd" value="_s-xclick">
-<input type="hidden" name="hosted_button_id" value="QD5BETP793CTA">
-<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_subscribeCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-</form> </div></a>
+     <a href='https://diamondrolls.github.io/diamondnews/'><div class="stocks3"><h7 class="neon" data-text="News">News</h7> </div></a>
       	        <a href='https://diamondrolls.github.io/forextrading/'><div class="stocks3"><h7 class="neon" data-text="Forex">Forex</h7>  </div></a> 
 	        <a href='https://diamondrolls.github.io/bitcoin/'><div class='stocks1'><h7 class="neon" data-text="Bitcoin">Bitcoin</h7></div></a>
 <a href='https://diamondrolls.github.io/fitness/'><div class='stocks3'><h7 class="neon" data-text="Fitness">Fitness</h7></div></a>
