--- a/index.html
+++ b/index.html
@@ -62,13 +62,10 @@
 </ul>
         
      
-<div class='plane'></div>
+ <a href='https://diamondrolls.github.io/diamondnews/'><div class='plane'><h7 class="neon" data-text="News">News</h7></div></a>
 
 	
-     <a href='https://diamondrolls.github.io/diamondnews/'><div class="stocks3"><h7 class="neon" data-text="News">News</h7> </div></a>
-      	        <a href='https://diamondrolls.github.io/forextrading/'><div class="stocks3"><h7 class="neon" data-text="Forex">Forex</h7>  </div></a> 
-	        <a href='https://diamondrolls.github.io/bitcoin/'><div class='stocks1'><h7 class="neon" data-text="Bitcoin">Bitcoin</h7></div></a>
-<a href='https://diamondrolls.github.io/fitness/'><div class='stocks3'><h7 class="neon" data-text="Fitness">Fitness</h7></div></a>
+<a href='https://diamondrolls.github.io/fitness/'><div class='stocks1'><h7 class="neon" data-text="Fitness">Fitness</h7></div></a>
                 <a href='https://diamondrolls.github.io/stocks/'><div class="stocks2"><h7 class="neon" data-text="Business">Business</h7>  </div></a>
 		<a href='https://diamondrolls.github.io/arcade/'><div class='stocks3'><h7 class="neon" data-text="Games">Games</h7></div></a>
 	<br>
