--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         
      
  <a href='https://diamondrolls.github.io/diamondnews/'><div class='plane'><center><h7 class="neon" data-text="News">News</h7></center></div></a>
-
+<div class='plane2'></div><div class='plane3'></div><div class='plane4'></div>
 	                <a href='https://diamondrolls.github.io/stocks/'><div class='stocks1'><h7 class="neon" data-text="Business">Business</h7></div></a>
                      <a href='https://diamondrolls.github.io/fitness/'><div class='stocks2'><h7 class="neon" data-text="Fitness">Fitness</h7></div></a>
 			  <a href='https://diamondrolls.github.io/thepremiumway/'><div class='music'><h7 class="neon" data-text="Music">Music</h7></div></a>
