--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
  <a href='https://diamondrolls.github.io/play/'><div class='plane'><center><h7 class="neon" data-text="Space Station">Space Station</h7></center></div></a>
 <div class='planeholder'><div class='plane2'></div><div class='plane3'></div><div class='plane4'></div><div class='plane5'></div></div>
 	                <a href='https://diamondrolls.github.io/stocks/'><div class='stocks1'><h7 class="neon" data-text="Business">Business</h7></div></a>
-                     <a href='https://diamondrolls.github.io/fitness/'><div class='stocks2'><h7 class="neon" data-text="Fitness">Fitness</h7></div></a>
+                     <a href='https://diamondrolls.github.io/merch/'><div class='stocks2'><h7 class="neon" data-text="Shop">Shop</h7></div></a>
 			  <a href='https://diamondrolls.github.io/thepremiumway/'><div class='music'><h7 class="neon" data-text="Music">Music</h7></div></a>
 
 		  <a href='https://diamondrolls.github.io/arcade/'><div class='stocks3'><h7 class="neon" data-text="Games">Games</h7></div></a>
