--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         
      
- <a href='https://diamondrolls.github.io/tech/'><div class='plane'><center><h7 class="neon" data-text="Shop">Shop</h7></center></div></a>
+ <a href='https://diamondrolls.github.io/caracc/'><div class='plane'><center><h7 class="neon" data-text="Shop">Shop</h7></center></div></a>
 <div class='planeholder'><div class='plane2'></div><div class='plane3'></div><div class='plane4'></div><div class='plane5'></div></div>
 	                <a href='https://diamondrolls.github.io/stocks/'><div class='stocks1'><h7 class="neon" data-text="Business">Business</h7></div></a>
                      <a href='https://diamondrolls.github.io/diamondnews/'><div class='stocks2'><h7 class="neon" data-text="Shop">Shop</h7></div></a>
