--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         
      
- <center><a href='https://diamondrolls.github.io/caracc/'><div class='plane'><img src="https://i.pinimg.com/564x/c5/14/6b/c5146bdd3f4d5c68dc7604ffe7385948.jpg" width="549px" height="274px"><center><h7 class="neon" data-text="Shop">Shop</h7></center></div></a>
+ <center><a href="https://diamondrolls.github.io/caracc/"><div class='plane'><img src="https://i.pinimg.com/originals/2c/c7/b2/2cc7b28406fed947d985c4b1facab092.jpg" width="549px" height="549px"><center><h7 class="neon" data-text="Shop">Shop</h7></center></div></a>
 
  </center>
 
