--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
 
         
      
- <center><a href="https://diamondrolls.github.io/caracc/"><div class='plane'><img src="https://i.pinimg.com/originals/2c/c7/b2/2cc7b28406fed947d985c4b1facab092.jpg" width="549px" height="549px"><center><h7 class="neon" data-text="Shop">Shop</h7></center></div></a>
-
+ <center><a href="https://diamondrolls.github.io/caracc/"><img src="https://i.pinimg.com/originals/2c/c7/b2/2cc7b28406fed947d985c4b1facab092.jpg" width="349px" height="349px"><center><h7 class="neon" data-text="Shop">Shop</h7></center></a>
  </center>
 
 <div class='planeholder'><div class='plane2'></div><div class='plane3'></div><div class='plane4'></div><div class='plane5'></div></div>
