--- a/index.html
+++ b/index.html
@@ -47,8 +47,12 @@
 
         
      
- <center><a href="https://diamondrolls.github.io/caracc/"><div class="plane">
-<h7 class="neon" data-text="Shop">Shop</h7></div></a>
+ <center><div class="plane">
+<h7 class="neon" data-text="Hey    👋 
+A two person round flight and hotel to Miami 😱and be featured on our entrepreneur of the month when you become our top ambassador!😎"> 
+Hey    👋 
+A two person round flight and hotel to Miami 😱and be featured on our entrepreneur of the month when you become our top ambassador!😎 </h7></div>
+ <a href="https://diamondrolls.github.io/merch/"> <h7 class="neon" data-text="Interested">Interested</h7> </a>
  </center>
 
 <div class='planeholder'><div class='plane2'></div><div class='plane3'></div><div class='plane4'></div><div class='plane5'></div></div>
