--- a/index.html
+++ b/index.html
@@ -42,18 +42,33 @@
  
 	
 
+<ul>
+
+<li>
+	<button>
+<div class="Ambassador"></div> <h7 class="neon" data-text="Ambassadors">Ambassadors</h7></button>
+<ul>
+<li>
+
+	  
+ <div class="plane">
+<h7 class="neon" data-text="Hey    👋 
+A two person round flight and hotel to Miami 😱and be featured on our entrepreneur of the month when you become our top ambassador!😎"> 
+Hey    👋 
+A two person round flight and hotel to Miami 😱and be featured on our entrepreneur of the month when you become our top ambassador!😎 </h7></div>
+ <center><a href="https://diamondrolls.github.io/merch/"> <h7 class="neon" data-text="Interested">Interested</h7> </a>
+ </center>	
+</li>
+</ul>
+</li>
+</ul>
+
 		 
 	
 
         
      
- <center><div class="plane">
-<h7 class="neon" data-text="Hey    👋 
-A two person round flight and hotel to Miami 😱and be featured on our entrepreneur of the month when you become our top ambassador!😎"> 
-Hey    👋 
-A two person round flight and hotel to Miami 😱and be featured on our entrepreneur of the month when you become our top ambassador!😎 </h7></div>
- <a href="https://diamondrolls.github.io/merch/"> <h7 class="neon" data-text="Interested">Interested</h7> </a>
- </center>
+
 
 <div class='planeholder'><div class='plane2'></div><div class='plane3'></div><div class='plane4'></div><div class='plane5'></div></div>
 	                <a href='https://diamondrolls.github.io/stocks/'><div class='stocks1'><h7 class="neon" data-text="Business">Business</h7></div></a>
