--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 <li>
 	<button>
-<div class="Ambassador"></div> <h7 class="neon" data-text="Ambassadors">Ambassadors</h7></button>
+<div class="Ambassador"> <h7 class="neon" data-text="Ambassadors">Ambassadors</h7></div></button>
 <ul>
 <li>
 
