--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <h7 class="neon" data-text="Hey    👋 
 A two person round flight and hotel to Miami 😱and be featured on our entrepreneur of the month when you become our top ambassador!😎"> 
 Hey    👋 
-A two person round flight and hotel to Miami 😱and be featured on our entrepreneur of the month when you become our top ambassador!😎 </h7></div>
+A two person round flight and hotel to Miami 😱and be featured on our entrepreneur of the month when you become our top ambassador!😎 </h7>
  <center><a href="https://diamondrolls.github.io/merch/"> <h7 class="neon" data-text="Interested">Interested</h7> </a>
  </center>	
 </li>
