--- a/index.html
+++ b/index.html
@@ -57,11 +57,13 @@ A two person round flight and hotel to Miami 😱and be featured on our entrepre
 Hey    👋 
 A two person round flight and hotel to Miami 😱and be featured on our entrepreneur of the month when you become our top ambassador!😎 </h7>
  <center><a href="https://diamondrolls.github.io/merch/"> <h7 class="neon" data-text="Interested">Interested</h7> </a>
- </center>	
+ </center></div>	
 </li>
 </ul>
 </li>
 </ul>
+
+</div>
 
 		 
 	
