--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 A two person round flight and hotel to Miami 😱and be featured on our entrepreneur of the month when you become our top ambassador!😎"> 
 Hey    👋 
 A two person round flight and hotel to Miami 😱and be featured on our entrepreneur of the month when you become our top ambassador!😎 </h7>
- <center><a href="https://diamondrolls.github.io/merch/"> <h7 class="neon" data-text="Interested">Interested</h7> </a>
+ <center><a href="https://diamondrolls.github.io/merch/"><div class="ikeannaoptions"><h7 class="neon" data-text="Interested">Interested</h7></div> </a>
  </center></div>	
 </li>
 </ul>
