--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <ul>
 <li>
 
-	  
+	<div class="plane">  
 	
 
 		 
@@ -66,7 +66,7 @@
 			  <a href='https://diamondrolls.github.io/thepremiumway/'><div class='music'><h7 class="neon" data-text="Music">Music</h7></div></a>
  <a href='https://diamondrolls.github.io/arcade/'><div class='stocks3'><h7 class="neon" data-text="Games">Games</h7></div></a>
 	
-
+</div>
 </li>
 </ul>
 </li>
