--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <ul>
 
 	<button>
-<div class="Ambassador"> <h7 class="neon" data-text="Ambassadors">Ambassadors</h7></div></button>
+<div class="Ambassador"> <h7 class="neon" data-text="Ambassadors">Ambassadors</h7></div>
 <ul>
 <li>
 
@@ -66,7 +66,7 @@
 	</div>
 </li>
 </ul>
-</li>
+</li></button>
 </ul>
 
 </div>
