--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 <ul>
 
-	<button>
+	<button><li>
 <div class="Ambassador"> <h7 class="neon" data-text="Ambassadors">Ambassadors</h7></div>
 <ul>
 <li>
