--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <ul>
 
 	<button><li>
-<div class="Ambassador"> <h7 class="neon" data-text="Ambassadors">Ambassadors</h7></div>
+<div class="Ambassador"> <h7 class="neon" data-text="Diamondrolls">Diamondrolls</h7></div>
 <ul>
 <li>
 
