--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
          
 <body>
 
-<img src="https://i.pinimg.com/originals/8b/9f/a7/8b9fa7e28b994241caede1258c216f2b.jpg" width="100px" height="100px">
 
 	<a href='https://diamondrolls.github.io/play/'> <div class='thorshammer'></div></a>
  <div class='planeholder'><div class='plane2'></div><div class='plane3'></div><div class='plane4'></div><div class='plane5'></div></div>
@@ -48,7 +47,9 @@
 <ul>
 
 	<button><li>
-<div class="Ambassador"> <h7 class="neon" data-text="Diamondrolls">Diamondrolls</h7></div>
+<div class="Ambassador"> <h7 class="neon" data-text="Diamondrolls">Diamondrolls</h7>
+<img src="https://i.pinimg.com/originals/8b/9f/a7/8b9fa7e28b994241caede1258c216f2b.jpg" width="100px" height="100px">
+</div>
 <ul>
 <li>
 
