--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	</header>       
  
    <head>
-	     </head>
+	    <h7 class="neon" data-text="Diamondrolls">Diamondrolls</h7>  </head>
          
 <body>
 
@@ -47,7 +47,8 @@
 <ul>
 
 	<button><li>
-<div class="Ambassador"> <h7 class="neon" data-text="Diamondrolls">Diamondrolls</h7>
+
+<div class="Ambassador">
 <img src="https://i.pinimg.com/originals/8b/9f/a7/8b9fa7e28b994241caede1258c216f2b.jpg" width="360px" height="360px">
 </div>
 <ul>
