--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
      
 
 	                <a href='https://diamondrolls.github.io/stocks/'><div class='stocks1'><h7 class="neon" data-text="Business">Business</h7></div></a>
-                     <a href='https://diamondrolls.github.io/merch/'><div class='stocks2'><h7 class="neon" data-text="Shop">Shop</h7></div></a>
+                     <a href='https://diamondrolls.github.io/shoes/'><div class='stocks2'><h7 class="neon" data-text="Shop">Shop</h7></div></a>
 			  <a href='https://diamondrolls.github.io/diamondnews/'><div class='music'><h7 class="neon" data-text="Upload">Upload</h7></div></a>
  <a href='https://diamondrolls.github.io/thepremiumway/'><div class='stocks3'><h7 class="neon" data-text="Videos">Videos</h7></div></a>
 	</div>
