--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <body>
 
 
-	<href='https://diamondrolls.github.io/diamondnews/'><div class='ikeannaoptions'><h7 class="neon" data-text="Login">Login</h7></div></a>
+	<a href='https://diamondrolls.github.io/diamondnews/'><div class='ikeannaoptions'><h7 class="neon" data-text="Login">Login</h7></div></a>
  <div class='planeholder'><div class='plane2'></div><div class='plane3'></div><div class='plane4'></div><div class='plane5'></div></div>
 	
 
