--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
         
      
-		<a href='https://diamondrolls.github.io/thepremiumway/'><div class='ikeannaoptions'><h7 class="neon" data-text="Login">Login</h7></div></a>
+		<a href='https://diamondrolls.github.io/thepremiumway/'><div class='ikeannaoptions'><h7 class="neon" data-text="Chatt">Chatt</h7></div></a>
 
 
 	</div>
