--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	</header>       
  
    <head>
-	    <h7 class="neon" data-text="Diamondrolls">Diamondrolls</h7>  </head>
+	    <h7 class="neon" data-text="Club Diamond">Club Diamond</h7>  </head>
          
 <body>
 
