--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#ffffff">
          <link href= 'https://diamondrolls.github.io/homepage/style.css' rel= 'stylesheet'>
-  <title>Get It Done</title>
+  <title>Claim It</title>
           
          <meta name="author" content="Solomon Shamir Thompson">
            <meta name="description" content="In God We Trust">
