--- a/index.html
+++ b/index.html
@@ -42,8 +42,11 @@
 
  <div class='planeholder'><div class='plane2'></div><div class='plane3'></div><div class='plane4'></div><div class='plane5'></div></div>
 	
-<a href="https://diamondrolls.github.io/stocks/"><div class="headerimage"> <h7 class="neon" data-text="Get Free Bitcoin">Get Free Bitcoin</h7></div></a>
-<ul>
+ <div class="registration">
+	     <h1>Free Bitcoin</h1>
+	 <h1>Upon registration enter in the referal code of who refered you and you will recieve your products within 2 to 3 weeks after you register. You keep 100% of your product earnings. Plus, If refer people you also get 15% of their registration fee. </h1>
+	   <br>   <div class="registrationbutton"><h7 class="neon" data-text="Sign Up">Sign Up</h7></div>
+	</div><ul>
 
 	<button><li>
 
