--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 <body>
 
 
-	
-	
-	<div class='plane1'></div> 
+	<div class='planeholder'></div>
+	<div class='lilfacebook'></div><div class='twod'></div>
+	<div class='plane1'></div> </div> 
 
 	
 
