--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <body>
         <div class='ufo'></div><div class='ufo2'></div><div class='ufo3'></div>
        
-	<div class='planeholder'></div>
+	<div class='planeholder'>
 	<div class='lilfacebook'></div><div class='twod'></div>
 	<div class='plane1'></div> </div> 
 
