--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	<center><div class='planeholder'>
 	<div class='twod'></div>
 	<div class='plane1'></div> </div> </center>
-	<div class='lilfacebook'></div>
+	<div class='lilfacebook'><div class='mouth'></div></div>
 
 	
 
