--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
 	</header>       
  
    <head>
-
+<meta name= "view port"
+	content= "width=device-width,
+	initial-scale=1.0">
+   </head>
+	
          
 <body>
        <div class="sun"></div> <div class="sun2"></div> <div class="sun3"></div>
